--- a/LoginGoldCS/appsettings.json
+++ b/LoginGoldCS/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionString": "mongodb+srv://sa:LoginGoldCS%40123$@cluster.9pzq7mx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster",
+    "DatabaseName": "LoginGoldCS"
+  }
 }
